# factorial

./: main.py  pyproject.toml
