[project]
name = "factorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.7.1",
    "niceguitoolkit>=0.1.3",
    "pyinstaller>=6.19.0",
    "pyqt6>=6.10.2",
    "pyqt6-webengine>=6.10.0",
    "pywebview>=6.1",
]
